--- a/src/app/features/components/bootcamp-detail/bootcamp-detail.component.html
+++ b/src/app/features/components/bootcamp-detail/bootcamp-detail.component.html
@@ -1,5 +1,45 @@
-<div class="bootcamp-details">
-  <h2>{{ selectedBootcamp?.name }}</h2>
-  <p><strong>Start Date:</strong> {{ selectedBootcamp?.startDate }}</p>
-  <p><strong>End Date:</strong> {{ selectedBootcamp?.endDate }}</p>
+<div class="flex justify-center items-center h-screen">
+  <!-- <a
+    href="#"
+    class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700"
+  > -->
+  <img
+    class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg"
+    src="{{ selectedBootcamp?.imagePath }}"
+    alt="Bootcamp Image"
+  />
+  <div class="flex flex-col justify-between p-4 leading-normal">
+    <h5
+      class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
+    >
+      {{ selectedBootcamp?.name }}
+    </h5>
+    <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+      {{ selectedBootcamp?.description }}
+    </p>
+    <ul class="font-normal text-gray-700 dark:text-gray-400">
+      <li><strong>Start Date:</strong> {{ selectedBootcamp?.startDate }}</li>
+      <li><strong>Duration:</strong> {{ selectedBootcamp?.duration }} weeks</li>
+      <li><strong>Cost:</strong> ${{ selectedBootcamp?.cost }}</li>
+    </ul>
+    <div class="flex justify-center mt-4">
+      <div class="flex">
+        <button
+          type="button"
+          class="text-white bg-green-700 hover:bg-green-800 focus:outline-none focus:ring-4 focus:ring-green-300 font-medium rounded-full text-sm px-5 py-2.5 text-center me-2 mb-2 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
+          (click)="addApplication(selectedBootcamp.id)"
+        >
+          Kayit ol
+        </button>
+        <button
+          type="button"
+          class="text-white bg-red-700 hover:bg-red-800 focus:outline-none focus:ring-4 focus:ring-red-300 font-medium rounded-full text-sm px-5 py-2.5 text-center me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900"
+          (click)="goToHomepage()"
+        >
+          Homepage
+        </button>
+      </div>
+    </div>
+  </div>
+  <!-- </a> -->
 </div>
