--- a/src/app/pages/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/pages/layouts/admin-layout/admin-layout.component.html
@@ -23,6 +23,15 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="admininstructors">İnstructors</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="blacklist">Blacklist</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="application">Application</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="applicationstate">Application State</a>
+        </li>
       </ul>
       <!-- SearchBar -->
        <nav class="navbar-expand-lg navbar-light bg-light">
