--- a/src/app/pages/layouts/admininstructors/admininstructors/admininstructors.component.html
+++ b/src/app/pages/layouts/admininstructors/admininstructors/admininstructors.component.html
@@ -1,7 +1,7 @@
     <form [formGroup]="updateFormI">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-md-10 pt-3">
+            <div class="col-md-10 pt-3 pt-3 mx-auto">
               <div class="d-flex justify-content-between align-items-center mb-3">
                 <h2 class="mb-0">Instructors</h2>
                 <div>
@@ -23,7 +23,7 @@
               </form>
               
               <div class="table-responsive">
-                <table mat-table class="table table-hover">
+                <table mat-table class="table table-hover custom-table">
                   <thead>
                     <tr>
                       <th>ID</th>
