--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,6 @@
   max-width: 50%;
   margin: 0 auto;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
