İmage Service & 2FA eklendi

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -74,7 +74,7 @@
   
                     <!-- Submit button -->
                     <button mdbRipple type="submit" class="btn btn-outline-primary btn-rounded col-md-12"
-                      (click)="login()"> Giriş Yap</button>
+                    (click)="login()"> Giriş Yap</button>
                   </form>
                 </form>
               </mdb-tab>
@@ -179,26 +179,27 @@
             </mdb-tabs>
           </div></div></div></div>
   </div>
-  <ng-template #verificationCodeTemplate>
-    <div class="modal-header">
-      <h5 class="modal-title">Doğrulama Kodu</h5>
-      <button type="button" class="close" (click)="closeModal()" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="modal-body">
-      <p>E-postanıza gelen doğrulama kodunu giriniz:</p>
-      <form [formGroup]="loginForm">
-        <div class="form-group">
-          <label for="verificationCode">Doğrulama Kodu</label>
-          <input type="text" class="form-control" id="verificationCode" formControlName="authenticatorCode" placeholder="Kodunuzu girin">
+  <div mdbModal class="modal top fade" id="verificationCodeModal" tabindex="-1" aria-labelledby="verificationCodeLabel" aria-hidden="true" data-mdb-backdrop="static" data-mdb-keyboard="true">
+    <div class="modal-dialog modal-xl modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="verificationCodeLabel">Doğrulama Kodu</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-      </form>
+        <div class="modal-body">
+          <p>E-postanıza gelen doğrulama kodunu giriniz:</p>
+          <form [formGroup]="loginForm">
+            <div class="form-group">
+              <label for="verificationCode">Doğrulama Kodu</label>
+              <input type="text" class="form-control" id="verificationCode" formControlName="authenticatorCode" placeholder="Kodunuzu girin">
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" (click)="closeVCLModal()">Kapat</button>
+          <button type="button" class="btn btn-primary" (click)="verifyCode()">Giriş Yap</button>
+        </div>
+      </div>
     </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-secondary" (click)="closeModal()">Kapat</button>
-      <button type="button" class="btn btn-primary" (click)="verifyCode()">Giriş Yap</button>
-    </div>
-  </ng-template>
-
+  </div>
 </section>
