--- a/src/app/pages/bootcamps/bootcamps.component.scss
+++ b/src/app/pages/bootcamps/bootcamps.component.scss
@@ -1,57 +1,3 @@
-// .welcome-container {
-//     position: relative;
-//     height: 100vh;
-//     overflow: hidden;
-//   }
-  
-//   .welcome-video {
-//     position: absolute;
-//     top: 50%;
-//     left: 50%;
-//     min-width: 100%;
-//     min-height: 100%;
-//     width: auto;
-//     height: auto;
-//     transform: translate(-50%, -50%);
-//     z-index: -1;
-//   }
-  
-//   .welcome-overlay {
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     width: 100%;
-//     height: 100%;
-//     background-color: rgba(0, 0, 0, 0.5); 
-//   }
-  
-//   .welcome-content {
-//     position: absolute;
-//     top: 50%;
-//     left: 50%;
-//     transform: translate(-50%, -50%);
-//     text-align: center;
-//     color: white;
-//     z-index: 1;
-//   }
-  
-//   .logo {
-//     width: 200px;
-//   }
-  
-//   .welcome-heading {
-//     font-size: 3.5rem;
-//     margin-bottom: 20px;
-//   }
-  
-//   .welcome-text {
-//     font-size: 1.8rem;
-//     margin-bottom: 30px;
-//   }
-  
-//   .btn-primary:hover {
-//     background-color: #0056b3;
-//   }
 #BackToMain {
   position: fixed;
   bottom: 20px;
@@ -104,4 +50,37 @@
   .carousel-item.active {
     height: 50vh;
   }
+}
+
+.pagination-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.pagination {
+  display: flex;
+  align-items: center;
+  gap: 100px;
+}
+
+.arrow {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.page-numbers {
+  display: flex;
+  gap: 20px;
+}
+
+.page-number {
+  padding: 5px 10px;
+  margin: 0 5px;
+  cursor: pointer;
+}
+
+.page-number.current-page {
+  font-weight: bold;
 }
