--- a/src/app/pages/forgot-password/forgot-password.component.scss
+++ b/src/app/pages/forgot-password/forgot-password.component.scss
@@ -1,22 +1,78 @@
-.forgot-password-container {
-    max-width: 400px;
-    margin: 50px auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  .login-container {
+    max-width: 450px;
+    margin: 150px auto;
+    padding: 25px;
+    background-color: #fff;
+    border-radius: 30px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
   
-  h2 {
+  .login-container .card-header {
+    background-color: #007bff;
+    color: #fff;
+    border-radius: 10px 10px 0 0;
+  }
+  
+  .login-container .card-footer {
+    background-color: #f8f9fa;
+    border-top: none;
+  }
+  
+  .centered {
     text-align: center;
   }
   
-  mat-form-field {
-    width: 100%;
-    margin-bottom: 20px;
+  html, body {
+    overflow: hidden;
+    height: 100%;
+    margin: 0;
+    padding: 0;
   }
   
-  button {
-    width: 100%;
+  .grainy-gradient-intro:before {
+    background: #c3ccea;
+    filter: url(#f);
+    overflow: hidden;
   }
+  
+  .grainy-gradient-intro:before, .grainy-gradient-intro:after {
+    position: fixed;
+    inset: 0;
+    z-index: -1;
+    --grad: radial-gradient(at 50%, red, rgba(255, 0, 0, 0.3) 55%, transparent 80%);
+    --mask: var(--grad), var(--grad);
+    -webkit-mask: var(--mask);
+    -webkit-mask-composite: source-in;
+    mask: var(--mask);
+    -webkit-mask-composite: source-in, xor;
+    mask-composite: intersect;
+    mix-blend-mode: unset;
+    content: "";
+    overflow: hidden;
+  }
+  
+  .grainy-gradient-intro:after {
+    overflow: hidden;
+    background: linear-gradient(90deg, #760dfe 20%, #f51b26, #fd9900);
+  }
+  
+  *::-webkit-scrollbar {
+    display: none; 
+  }
+  
+  * {
+    scrollbar-width: none; 
+  }
+  
+
+  body::-webkit-scrollbar,
+  html::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Tüm potansiyel scrollbar'ları hedef alır */
+  body, html, .grainy-gradient-intro, .grainy-gradient-intro:before, .grainy-gradient-intro:after {
+    overflow: hidden !important;
+  }
+  
   
